waybar/style.css
* {
  border: none;
  border-radius: 0;
  font-family: Symbols Nerd Font Mono, Hack;
  font-size: 14px;
  min-height: 20px;
}

window#waybar {
  background: transparent;
}

window#waybar.hidden {
  opacity: 0.2;
}

.modules-left,
.modules-center,
.modules-right {
  background: rgba(22, 28, 39, 0.8);
  border-radius: 8px;
  margin: 8px 8px 0 8px;
  padding: 2px 8px;
}

.modules-left {
  padding-right: 2px;
}

#workspaces button.active {
  background: rgba(255, 255, 255, 0.1);
}

#clock,
#cpu,
#memory,
#temperature,
#network,
#pulseaudio,
#mpd,
#window,
#workspaces button,
#custom-wl-gammarelay-temperature,
#custom-wl-gammarelay-brightness {
  border-radius: 8px;
  color: #ffffff;
  margin: 0;
  padding: 4px;
}

#window {
  min-width: 96px;
}

#workspaces button {
  margin: 0 2px;
  padding: 0 8px;
}

